--- a/CJChat/packages.config
+++ b/CJChat/packages.config
@@ -30,9 +30,14 @@
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="Moment.js" version="2.6.0" targetFramework="net461" />
+  <package id="Moment.Timezone.js" version="0.5.13" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net461" />
+  <package id="TimeZoneConverter" version="2.3.1" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
