--- a/CJChat/CJChat.csproj
+++ b/CJChat/CJChat.csproj
@@ -222,6 +222,7 @@
     </Compile>
     <Compile Include="Models\ChatMessage.cs" />
     <Compile Include="Models\ChatUser.cs" />
+    <Compile Include="Models\SignOn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
